# ipcoin

./: COPYING  INSTALL  Makefile.am  README.md  configure.ac
share/pixmaps/: bitcoin128.xpm  bitcoin16.xpm  bitcoin256.xpm  bitcoin32.xpm  bitcoin64.xpm
src/: Makefile.am  Makefile.include  chainparams.cpp  checkpoints.cpp  clientversion.h  coins.h  core.h  init.cpp  ipcoin-cli.cpp  ipcoind-res.rc  ipcoind.cpp  main.cpp  main.h  miner.cpp  net.cpp  netbase.h  noui.cpp  rpcblockchain.cpp  rpcclient.cpp  rpcclient.h  rpcdump.cpp  rpcmining.cpp  rpcmisc.cpp  rpcnet.cpp  rpcprotocol.cpp  rpcrawtransaction.cpp  rpcserver.cpp  script.cpp  util.cpp  util.h  version.cpp  version.h
src/qt/: Makefile.am  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoinaddressvalidator.cpp  bitcoinstrings.cpp  coincontroldialog.cpp  editaddressdialog.cpp  guiutil.cpp  ipcoin.cpp  ipcoinamountfield.cpp  ipcoingui.cpp  ipcoinunits.cpp  ipcoinunits.h  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  receivecoinsdialog.cpp  receiverequestdialog.cpp  recentrequeststablemodel.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  splashscreen.cpp  transactiondesc.cpp  transactiontablemodel.cpp  transactionview.cpp  walletframe.cpp  walletmodel.cpp  walletview.cpp
src/qt/forms/: aboutdialog.ui  coincontroldialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsentry.ui  signverifymessagedialog.ui  ui_aboutdialog.h  ui_addressbookpage.h  ui_coincontroldialog.h  ui_editaddressdialog.h  ui_intro.h  ui_optionsdialog.h  ui_overviewpage.h  ui_receivecoinsdialog.h  ui_rpcconsole.h  ui_sendcoinsdialog.h  ui_sendcoinsentry.h  ui_signverifymessagedialog.h
src/qt/res/icons/: bitcoin.icns
